IO10/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_0_xaxidma_example_simple_intr_1.build.log
13:18:32 **** Build of configuration Debug for project standalone_bsp_0_xaxidma_example_simple_intr_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/xaxidma_example_simple_intr.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxidma_example_simple_intr.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/xaxidma_example_simple_intr.d" -MT"src/xaxidma_example_simple_intr.o" -o "src/xaxidma_example_simple_intr.o" "../src/xaxidma_example_simple_intr.c"
../src/xaxidma_example_simple_intr.c:121:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^~~~~~~
../src/xaxidma_example_simple_intr.c: In function 'main':
../src/xaxidma_example_simple_intr.c:133:21: error: 'XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_FABRIC_SPI_0_VEC_ID'?
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_simple_intr.c:133:21: note: in definition of macro 'TX_INTR_ID'
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xaxidma_example_simple_intr.c:133:21: note: each undeclared identifier is reported only once for each function it appears in
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_simple_intr.c:133:21: note: in definition of macro 'TX_INTR_ID'
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xaxidma_example_simple_intr.c:132:21: error: 'XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID'?
 #define RX_INTR_ID  XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID
                     ^
../src/xaxidma_example_simple_intr.c:132:21: note: in definition of macro 'RX_INTR_ID'
 #define RX_INTR_ID  XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/xaxidma_example_simple_intr.o] ´íÎó 1

13:18:33 Build Finished (took 501ms)

